--- a/debian/postgresql-metrics.service
+++ b/debian/postgresql-metrics.service
@@ -4,7 +4,7 @@ StartLimitInterval=100
 StartLimitBurst=10
 
 [Service]
-Type=forking
+Type=simple
 ExecStart=/usr/bin/postgresql-metrics long-running-ffwd
 Restart=on-failure
 RestartSec=5
