--- a/etc/postgresql-metrics/default/postgresql-metrics.yml
+++ b/etc/postgresql-metrics/default/postgresql-metrics.yml
@@ -47,7 +47,7 @@ db_functions:
     - ["get_stats_oldest_transaction_timestamp", 180]
     - ["get_stats_index_hit_rates", 60]
     # table bloat is a heavy query, which might take many minutes to execute for huge tables
-    # 43200 = 12*60*60 = 12 hours
+    # 43200 seconds = 12*60*60 seconds = 12 hours
     - ["get_stats_table_bloat", 43200]
     # replication status relies on `pg_stat_wal_receiver`, which is only available on postgres 9.6+
     # - ["get_stats_incoming_replication_status", 30]
