--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends:
   libpq-dev,
   debhelper (>= 9),
   dh-virtualenv (>= 1.0),
+  dh-systemd (>= 1.5)
 Standards-Version: 3.9.5
 X-Python-Version: >= 3.5
 
